every small detail is done, got rid of tests