@@ -1,11 +1,16 @@
 package com.github.UsefulHands.reception.features.guest;
 
-import com.github.UsefulHands.reception.common.exception.ConflictException;
+import com.github.UsefulHands.reception.common.exception.ResourceNotFoundException;
+import com.github.UsefulHands.reception.features.admin.AdminDto;
+import com.github.UsefulHands.reception.features.user.UserEntity;
+import com.github.UsefulHands.reception.features.user.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -13,42 +18,36 @@ import java.util.List;
 public class GuestService {
 
     private final GuestRepository guestRepository;
+    private final UserService userService;
     private final GuestMapper guestMapper;
 
+    @Transactional
+    public GuestDto registerGuest(GuestDto guestDto, String username, String password) {
+        log.info("Registering new Guest: {}", guestDto.getFirstName());
+
+        UserEntity userEntity = userService.createAccount(username, password, "ROLE_GUEST");
+        GuestEntity guestEntity = guestMapper.toEntity(guestDto);
+        guestEntity.setUser(userEntity);
+        GuestEntity savedGuest = guestRepository.save(guestEntity);
+        log.info("Guest profile saved with ID: {} for User ID: {}", savedGuest.getId(), userEntity.getId());
+
+        guestDto.setId(savedGuest.getId());
+        guestDto.setUserId(userEntity.getId());
+        return guestMapper.toDto(savedGuest);
+    }
+
     public List<GuestDto> getAllGuests() {
-        log.debug("Fetching all guests from database");
-
-        List<GuestEntity> guests = guestRepository.findAll();
-        log.info("Retrieved {} guests", guests.size());
-
-        return guests.stream()
+        log.info("Retrieving guests");
+        return guestRepository.findAll()
+                .stream()
                 .map(guestMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public GuestDto createGuest(GuestDto guestDto) {
-        log.info("Creating a new guest with identification number: {}", guestDto.getIdentificationNumber());
-
-        if (guestRepository.existsByIdentificationNumber(guestDto.getIdentificationNumber())) {
-            log.warn("Guest creation failed: Identification number {} already exists", guestDto.getIdentificationNumber());
-            throw new ConflictException("Someone else has this ID number!");
-        }
-
-        if (guestRepository.existsByEmail(guestDto.getEmail())) {
-            log.warn("Guest creation failed: Email {} already exists", guestDto.getEmail());
-            throw new ConflictException("This email is already in use!");
-        }
-
-        if (guestRepository.existsByPhoneNumber(guestDto.getPhoneNumber())) {
-            log.warn("Guest creation failed: Phone number {} already exists", guestDto.getPhoneNumber());
-            throw new ConflictException("This phone number is already in use!");
-        }
-
-        GuestEntity entity = guestMapper.toEntity(guestDto);
-        GuestEntity saved = guestRepository.save(entity);
-
-        log.info("Successfully created guest. Assigned ID: {}", saved.getId());
-        return guestMapper.toDto(saved);
+    public GuestDto getGuest(Long id){
+        log.info("Retrieving guest");
+        return guestRepository.findByUserId(id)
+                .map(guestMapper::toDto)
+                .orElseThrow(() -> new ResourceNotFoundException("Guest not found with id: " + id));
     }
-
 }
